# advent_of_code_2023

./: .editorconfig  .gitignore  .markdownlint-cli2.jsonc  CONTRIBUTING.md  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
advent_2023/: README.md
advent_2023/puzzle_2023_day_1/: Cargo.toml  README.md
advent_2023/puzzle_2023_day_1/src/: lib.rs  main.rs
advent_2023/puzzle_2023_day_2/: Cargo.toml  README.md
advent_2023/puzzle_2023_day_2/src/: lib.rs  main.rs
advent_2023/puzzle_2023_day_3/: Cargo.toml  README.md  input.txt
advent_2023/puzzle_2023_day_3/src/: lib.rs  main.rs
advent_2023/puzzle_2023_day_4/: Cargo.toml  README.md  input.txt
advent_2023/puzzle_2023_day_5/: Cargo.toml  README.md
advent_2023/puzzle_2023_day_6/: Cargo.toml  README.md
advent_2023/puzzle_2023_day_7/: Cargo.toml  README.md
advent_2023/puzzle_2023_day_8/: Cargo.toml  README.md
advent_2024/: README.md
advent_2024/puzzle_2024_day_1/: Cargo.toml  README.md  input.txt
advent_2024/puzzle_2024_day_2/: Cargo.toml  README.md
day_1/: Cargo.toml  README.md
day_1/src/: lib.rs  main.rs
day_2/: Cargo.toml  README.md
day_2/src/: lib.rs  main.rs
day_3/: Cargo.toml  README.md
day_3/src/: lib.rs  main.rs
day_4/: Cargo.toml  README.md
day_4/src/: lib.rs  main.rs
day_5/: Cargo.toml  README.md
day_5/src/: lib.rs  main.rs
day_6/: Cargo.toml  README.md  input.txt
day_6/src/: lib.rs  main.rs
day_7/: Cargo.toml  README.md
day_7/src/: lib.rs  main.rs
day_8/: Cargo.toml  README.md
day_8/src/: lib.rs  main.rs
(+14 files in other folders)
